--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ database.url=jdbc:mysql://localhost:3306/filmstar
 database.hbm2ddl.auto=create
 database.username=root
 database.password=root
-database.showSql=true
+database.showSql=false
 database.insertSampleData=true
 database.driverClassName=com.mysql.jdbc.Driver
 database.newGeneratorMappings=false
