Repository for FilmDTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #database
 database.url=jdbc:mysql://localhost:3306/filmstar
 database.hbm2ddl.auto=create
-database.username=root
-database.password=root
+database.username=filmstar
+database.password=filmstar
 database.showSql=false
 database.insertSampleData=true
 database.driverClassName=com.mysql.jdbc.Driver
